[package]
name = "rusta"
version = "0.0.2"
authors = ["Norberts Kakste <kakste@norber.tech> <github: norberts.kakste>"]
description = "Dota 2 replay parser"
keywords = ["dota", "dota_2", "replay", "parser", "protobuf"]
categories = ["encoding", "parsing", "games"]
license = "Apache-2.0"
exclude = [
    ".idea/*"
]

[dependencies]
